# aws-iot-onboarding

./: .gitattributes  .gitignore  .pylintrc  Architecture.drawio  LICENSE.md  README.md  pyproject.toml
.devcontainer/: devcontainer.env.example  devcontainer.json
just_in_time_onboarding/: .terraform.lock.hcl  README.md  main.tf  variables.tf
just_in_time_provisioning/: README.md  jitp-provisioning-template.json  main.tf  provider.tf  variables.tf
manual_onboarding/: README.md  create_pkg.sh  main.tf  provider.tf  variables.tf
manual_onboarding/runtimescript/: runtimescript.py
manual_onboarding_development/: .terraform.lock.hcl  README.md  extract_device_cert.py  main.tf  provider.tf  variables.tf
manual_registration_using_production_records/: README.md  main.tf  variables.tf
manual_registration_using_production_records/runtimescript/: runtimescript.py
resourcemanagement/: .terraform.lock.hcl  create_pkg.sh  delete_iot_resources.py  main.tf  provider.tf  variables.tf
runtimescript/: runtimescript.py
tests/: test_delete_iot_resources.py  test_runtimescript.py
utils/: delete_things_in_group.py
