[tool.poetry]
name = "cloud-onboarding-production-records"
version = "0.1.0"
description = ""
authors = ["IAR Systems"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.85"
jwcrypto = "^1.5.6"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
isort = "^5.13.2"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = [
  "runtimetests",
]
